frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: k8s-project
  labels:
    role: frontend
    env: demo
spec:
  ports:
   - protocol: TCP
     port: 80
  selector:
    role: frontend
