network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: k8s-project
spec:
  podSelector: {}
  policyTypes:
  - Ingress
